# legal-ai-assessment

./: .editorconfig  .env.example  .gitignore  .ruff.toml  ARCHITECTURE.md  ASSUMPTIONS.md  Makefile  PLAN.md  README.md  REQUIREMENTS.md  REVIEWER_GUIDE.md  SUBMISSION_EMAIL.md  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt
app/: __init__.py  config.py  ingest.py  logging.py  schemas.py  usage_log.py
eval/: README.md  draft_quality_rubric.md  queries.json
samples/: README.md
samples/processed/: 01_case_brief_clean.manifest.json  01_case_brief_clean.text.md  02_title_search_scanned.manifest.json  02_title_search_scanned.text.md  03_property_deed.manifest.json  03_property_deed.text.md  04_handwritten_notice.manifest.json  04_handwritten_notice.text.md
scripts/: generate_samples.py
tasks/: README.md  TASK-000-project-setup.md  TASK-001-document-ingestion.md  TASK-002-structured-extraction.md  TASK-003-retrieval-layer.md  TASK-004-draft-generation.md  TASK-005-edit-learning-loop.md  TASK-006-admin-dashboard.md  TASK-007-evaluation-quality-submission.md
